fixed issue that kept adding horizontal scroll, edited contact form, edited about page

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  height: 100vh;
+  width: 100vw;
+  max-width: 900px;
+  padding: 1rem;
 }
 
 .App-logo {
@@ -35,4 +39,20 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+html {
+  /* this makes sure the padding and the border is included in the box sizing */
+  box-sizing: border-box;
+  overflow-y: hidden;
+}
+
+html body {
+  padding: 0;
+  margin: 0;
+  overflow-y: hidden;
 }
