--- a/src/components/Hero/style.css
+++ b/src/components/Hero/style.css
@@ -1,11 +1,11 @@
 .hero {
-    /* height: 200px; */
+    height: 500px;
     background-size: cover;
     background-position: center;
     position: relative;
   }
   
-  /* .hero::after {
+  .hero::after {
     content: "";
     display: block;
     opacity: .4;
@@ -15,21 +15,20 @@
     left: 0;
     right: 0;
     background: black;
-  } */ */
+  }
   
   .hero * {
     position: relative;
     z-index: 2;
   }
   
-  .hero h1 {
+  .hero h1, .hero h2 {
     color: white;
+  }
+  
+  .hero h1 {
     font-size: 60px;
     padding-top: 140px;
     margin-top: 0;
-    padding-bottom: 50px;
   }
   
-  #about {
-    text-align: center;
-  }
